objects/VPPSR_Serial_Number_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Registration_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Registration Detail</label>
        <referenceTo>VPPSR_Registration_Detail__c</referenceTo>
        <relationshipName>Serial_Number_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>additional_Aircraft_Details__c</fullName>
        <label>additional Aircraft Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>additional_Vehicle_Details__c</fullName>
        <label>additional Vehicle Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serial_Number_Type__c</fullName>
        <label>serial Number Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serial_Number__c</fullName>
        <label>serial Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>VPPSR Serial Number Detail</label>
    <nameField>
        <displayFormat>VSN-{00000000}</displayFormat>
        <label>Serial Number Details  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Serial Number Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>